--- a/index.html
+++ b/index.html
@@ -10,9 +10,40 @@
 </head>
 
 <body>
-    <canvas id="canvas"></canvas>
+    <div id="game-aligment">
+        <canvas id="canvas"></canvas>
+        <div id="control-box">
+            <div id="left">
+                <div class="top-placeholder">
+                    <div class="placeholder"></div>
+                    <div class="placeholder" id="toLeft">
+                        <p>LEFT</p>
+                    </div>
+                    <div class="placeholder"></div>
+                </div>
+                <div class="middle-placeholder">
+                    <div class="placeholder" id="toUp">
+                        <p>UP</p>
+                    </div>
+                    <div class="placeholder"></div>
+                    <div class="placeholder" id="toDown">
+                        <p>DOWN</p>
+                    </div>
+                </div>
+                <div class="bottom-placeholder">
+                    <div class="placeholder"></div>
+                    <div class="placeholder" id="toRight">
+                        <p>RIGHT</p>
+                    </div>
+                    <div class="placeholder"></div>
+                </div>
+            </div>
+            <div id="right">
 
-    <script src="/src/script.js"></script>
+            </div>
+        </div>
+
+        <script src="/src/script.js"></script>
 </body>
 
 </html>
