--- a/index.html
+++ b/index.html
@@ -5,45 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hunter VS Zombies</title>
-    <link rel="stylesheet" href="./src/style.css">
+    <title>HvZ</title>
+    <link rel="stylesheet" href="/src/style.css">
 </head>
 
 <body>
-    <div id="game-aligment">
-        <canvas id="canvas" width="800" height="600"></canvas>
-        <div id="control-box">
-            <div id="left">
-                <div class="top-placeholder">
-                    <div class="placeholder"></div>
-                    <div class="placeholder" id="toLeft">
-                        <p>LEFT</p>
-                    </div>
-                    <div class="placeholder"></div>
-                </div>
-                <div class="middle-placeholder">
-                    <div class="placeholder" id="toUp">
-                        <p>UP</p>
-                    </div>
-                    <div class="placeholder"></div>
-                    <div class="placeholder" id="toDown">
-                        <p>DOWN</p>
-                    </div>
-                </div>
-                <div class="bottom-placeholder">
-                    <div class="placeholder"></div>
-                    <div class="placeholder" id="toRight">
-                        <p>RIGHT</p>
-                    </div>
-                    <div class="placeholder"></div>
-                </div>
-            </div>
-            <div id="right">
-
-            </div>
-        </div>
-
-        <script src="/src/script.js"></script>
+    <canvas id="canvas"></canvas>
 </body>
+<script src="/src/script.js"></script>
+<script src="/src/inputHandler.js"></script>
 
 </html>
