Include touch support

--- a/index.html
+++ b/index.html
@@ -11,8 +11,34 @@
 
 <body>
     <canvas id="canvas"></canvas>
+    <div id="control-holder">
+        <div class="empty-block">
+            <div class="empty-block"></div>
+            <button class="empty-block" id="toLeft">
+                <p>LEFT</p>
+            </button>
+            <div class="empty-block"></div>
+        </div>
+        <div class="empty-block">
+            <button class="empty-block" id="toUp">
+                <p>UP</p>
+            </button>
+            <div class="empty-block"></div>
+            <button class="empty-block" id="toDown">
+                <p>DOWN</p>
+            </button>
+        </div>
+        <div class="empty-block">
+            <div class="empty-block"></div>
+            <button class="empty-block" id="toRight">
+                <p>RIGHT</p>
+            </button>
+            <div class="empty-block"></div>
+        </div>
+    </div>
 </body>
 <script src="/src/script.js"></script>
 <script src="/src/inputHandler.js"></script>
+<script src="/src/touchInputHandler.js"></script>
 
 </html>
