--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HvZ</title>
-    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="./src/style.css">
 </head>
 
 <body>
@@ -37,8 +37,8 @@
         </div>
     </div>
 </body>
-<script src="/src/script.js"></script>
-<script src="/src/inputHandler.js"></script>
-<script src="/src/touchInputHandler.js"></script>
+<script src="./src/script.js"></script>
+<script src="./src/inputHandler.js"></script>
+<script src="./src/touchInputHandler.js"></script>
 
 </html>
