Improve button design

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
         <div class="empty-block">
             <div class="empty-block"></div>
             <button class="empty-block" id="toLeft">
-                <p>LEFT</p>
+                <img src="./src/arrowLeft.png">
             </button>
             <div class="empty-block"></div>
         </div>
         <div class="empty-block">
             <button class="empty-block" id="toUp">
-                <p>UP</p>
+                <img src="./src/arrowUp.png">
             </button>
             <div class="empty-block"></div>
             <button class="empty-block" id="toDown">
-                <p>DOWN</p>
+                <img src="./src/arrowDown.png">
             </button>
         </div>
         <div class="empty-block">
             <div class="empty-block"></div>
             <button class="empty-block" id="toRight">
-                <p>RIGHT</p>
+                <img src="./src/arrowRight.png">
             </button>
             <div class="empty-block"></div>
         </div>
