--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
         <div class="empty-block">
             <div class="empty-block"></div>
             <button class="empty-block" id="toLeft">
-                <img src="./src/arrowLeft.png">
+                <!-- <img src="./src/arrowLeft.png"> -->
             </button>
             <div class="empty-block"></div>
         </div>
         <div class="empty-block">
             <button class="empty-block" id="toUp">
-                <img src="./src/arrowUp.png">
+                <!-- <img src="./src/arrowUp.png"> -->
             </button>
             <div class="empty-block"></div>
             <button class="empty-block" id="toDown">
-                <img src="./src/arrowDown.png">
+                <!-- <img src="./src/arrowDown.png"> -->
             </button>
         </div>
         <div class="empty-block">
             <div class="empty-block"></div>
             <button class="empty-block" id="toRight">
-                <img src="./src/arrowRight.png">
+                <!-- <img src="./src/arrowRight.png"> -->
             </button>
             <div class="empty-block"></div>
         </div>
