Removed touch support

--- a/index.html
+++ b/index.html
@@ -10,35 +10,11 @@
 </head>
 
 <body>
-    <canvas id="canvas"></canvas>
-    <div id="control-holder">
-        <div class="empty-block">
-            <div class="empty-block"></div>
-            <button class="empty-block" id="toLeft">
-                <!-- <img src="./src/arrowLeft.png"> -->
-            </button>
-            <div class="empty-block"></div>
-        </div>
-        <div class="empty-block">
-            <button class="empty-block" id="toUp">
-                <!-- <img src="./src/arrowUp.png"> -->
-            </button>
-            <div class="empty-block"></div>
-            <button class="empty-block" id="toDown">
-                <!-- <img src="./src/arrowDown.png"> -->
-            </button>
-        </div>
-        <div class="empty-block">
-            <div class="empty-block"></div>
-            <button class="empty-block" id="toRight">
-                <!-- <img src="./src/arrowRight.png"> -->
-            </button>
-            <div class="empty-block"></div>
-        </div>
+    <h1>Hunter vs Zombies</h1>
+    <canvas id="canvas" width="800" height="600"></canvas>
     </div>
 </body>
 <script src="./src/script.js"></script>
-<script src="./src/inputHandler.js"></script>
-<script src="./src/touchInputHandler.js"></script>
+<script src="./src/inputHandler.js""></script>
 
 </html>
