--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </div>
 </body>
 <script src="./src/script.js"></script>
-<script src="./src/inputHandler.js""></script>
+<script src="./src/inputHandler.js"></script>
 
 </html>
